DE2439 - Combined horizontal slider issues Add MS Edge solution to hide scrollbar.

--- a/crossroads.net/styles/pages/streaming.scss
+++ b/crossroads.net/styles/pages/streaming.scss
@@ -1071,6 +1071,7 @@ streaming, landing {
             display: none;
           }
           overflow: -moz-scrollbars-none;
+          -ms-overflow-style: -ms-autohiding-scrollbar;
         }
 
         .crds-carousel {
